--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iot_platform_web",
+  "name": "netease_playlist_classifier",
   "private": true,
   "version": "0.0.0",
   "type": "module",
